# mermark

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  updater.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: backend-engineer.md  code-auditor.md  feature-architect.md  frontend-engineer.md  qa-verifier.md
.github/workflows/: release-windows.yml
docs/: ENONCE_TITLEBAR_RECIPE.md  FEATURES.md  FILE_EXPLORER_SPEC.md  IMPROVEMENT_MASTER_PLAN.md  LIVE_PREVIEW_GOAL.md  REFINEMENT_MASTER_PLAN.md  ROADMAP.md  SETTINGS_COMPONENT_SPEC.md  SETTINGS_REDESIGN_BRIEF.md  TOPBAR_REDESIGN_PLAN.md  sample.md
docs/design/: plugin-system.md
docs/reviews/: architecture-review-2026-06-13.md  intent-review-2026-06-13.md  intent-review-2026-07-03.md
scripts/: _scratch-viewer-size-check.mjs  cdp-debug.mjs  describe-windows-lag-cli.mjs  find-dispatched-run-cli.mjs  footnote-golden.mjs  install-cli.sh  mermaid-golden.mjs  nav-trace.mjs  release.sh  selection-golden.mjs  settings-golden.mjs  sidebar-contrast-golden.mjs  sidebar-zoom-golden.mjs  toc-golden.mjs  viewer-golden.mjs  viewer-zoom-golden.mjs  write-updater-json.mjs
scripts/lib/: build-updater-manifest.mjs  check-signing-key.py  describe-windows-lag.mjs  find-dispatched-run.mjs  make-excel-fixture.mjs  make-pdf-fixture.mjs  preflight.mjs
src/: breadcrumb.ts  bundle.ts  editor.ts  icons.ts  main.ts  path.ts  sidebar-panels.ts  sidebar-toggle.ts  status-bar-update.ts  status-bar-width.ts  status-bar.ts  styles.css  theme.ts  title-bar.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: sample.md
src-tauri/icons/: icon.icns
src-tauri/src/: bundle.rs  cli.rs  commands.rs  hwp.rs  lib.rs  main.rs  watcher.rs
src/api/: index.ts
src/chrome/: breadcrumb.ts  path-label.ts  title-bar.ts
src/diff/: line-diff.ts
src/document/: file-watch.ts
src/explorer/: explorer-panel.ts  file-icons.ts
src/extensions/: index.ts
src/favorites/: favorite-folders.ts  favorites-panel.ts
src/fonts/: LICENSES.md  fonts.css
src/history/: nav-history.ts
src/markdown/: bounded-cache.ts  bullet.ts  callout-widget.ts  callout.ts  checkbox.ts  embed.ts  (+23 more)
tests/: api-fence.test.ts  autolink.test.ts  bounded-cache.test.ts  breadcrumb.test.ts  build-updater-manifest.test.ts  bundle.test.ts  callout-types.test.ts  cjk-bold.test.ts  close-brackets.test.ts  code-widget.test.ts  describe-windows-lag.test.ts  editor-autosave.test.ts  editor-selection.test.ts  editor-state-config.test.ts  embed.test.ts  excel-viewer.test.ts  explorer-panel.test.ts  favorite-folders.test.ts  favorites-panel.test.ts  feature-registry.test.ts  feature-reload.test.ts  fenced-body.test.ts  file-icons.test.ts  file-watch.test.ts  find-dispatched-run.test.ts  first-claim-wins.test.ts  flash-status.test.ts  fold-marker.test.ts  footnote-hover.test.ts  footnote-nav.test.ts  frontmatter.test.ts  guide-alignment.test.ts  heading-cont.test.ts  html-viewer.test.ts  hwp-pages.test.ts  hwp-viewer.test.ts  image-viewer.test.ts  image.test.ts  inline-render.test.ts  keybind-control.test.ts  (+63 more)
(+93 files in other folders)
