[package]
name = "mermark"
version = "0.6.0"
description = "Mermaid + Markdown viewer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mermark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
# Single-file fs watcher for auto-reload. We use `notify` directly (not
# tauri-plugin-fs) so the watch surface stays exactly one open file with no
# extra `fs:` capability scope — see watcher.rs and 01_architect_design.md.
notify = "6"

